# arya-STARK_v1.0

./: README.md  config.py  main.py
artifacts/: metrics_clients.tsv  metrics_server.tsv
artifacts/proofs/: client_0_round_0.proof  client_0_round_1.proof  client_0_round_2.proof  client_0_round_3.proof  client_0_round_4.proof  client_10_round_0.proof  client_10_round_1.proof  client_10_round_2.proof  client_10_round_3.proof  client_10_round_4.proof  client_11_round_0.proof  client_11_round_1.proof  client_11_round_2.proof  client_11_round_3.proof  client_11_round_4.proof  client_12_round_0.proof  client_12_round_1.proof  client_12_round_2.proof  client_12_round_3.proof  client_12_round_4.proof  client_13_round_0.proof  client_13_round_1.proof  client_13_round_2.proof  client_13_round_3.proof  client_13_round_4.proof  client_14_round_0.proof  client_14_round_1.proof  client_14_round_2.proof  client_14_round_3.proof  client_14_round_4.proof  client_15_round_0.proof  client_15_round_1.proof  client_15_round_2.proof  client_15_round_3.proof  client_15_round_4.proof  client_16_round_0.proof  client_16_round_1.proof  client_16_round_2.proof  client_16_round_3.proof  client_16_round_4.proof  (+460 more)
artifacts/traces/: client_0_round_0.json  client_0_round_1.json  client_0_round_2.json  client_0_round_3.json  client_0_round_4.json  client_10_round_0.json  client_10_round_1.json  (+493 more)
aryaStark/: .gitignore  Cargo.toml
aryaStark/src/: gd_air.rs  lib.rs
clients/: attacks.py  client.py
models/: model.py
server/: aggregation.py  server.py
utils/: data.py  serialization.py
