[package]
name = "arya_stark"
version = "1.0"
edition = "2024"

authors = ["Abdoul Ahad FALL <fal.abdoulahad@gmail.com>"]
description = "arya-STARK framework for verifiable Federated Learning with post-quantum security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ccsArtifacts/arya-STARK_v1.0"
documentation = "In progress"
readme = "README.md"
keywords = ["cryptography", "zk-stark", "federated-learning", "post-quantum"]
categories = ["cryptography", "science"]


[dependencies]
winterfell = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
